@@ -1,6 +1,8 @@
 plugins {
     kotlin("jvm") version "1.9.23"
     application
+
+    id("com.github.johnrengelman.shadow") version "8.1.1"
 }
 
 repositories {
@@ -9,8 +11,8 @@ repositories {
 
 val osName = System.getProperty("os.name").lowercase()
 val platform = when {
-    osName.contains("win") -> "win"
-    osName.contains("mac") -> "mac"
+    osName.contains("win")   -> "win"
+    osName.contains("mac")   -> "mac"
     osName.contains("linux") -> "linux"
     else -> error("Unsupported OS: $osName")
 }
@@ -19,10 +21,11 @@ val javafxVersion = "21.0.7"
 
 dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib")
-    implementation("org.openjfx:javafx-controls:$javafxVersion:$platform")
-    implementation("org.openjfx:javafx-base:$javafxVersion:$platform")
-    implementation("org.openjfx:javafx-graphics:$javafxVersion:$platform")
 
+
+    listOf("base", "graphics", "controls").forEach { mod ->
+        implementation("org.openjfx:javafx-$mod:$javafxVersion:$platform")
+    }
 }
 
 application {
@@ -35,10 +38,20 @@ java {
     }
 }
 
+
 tasks.withType<JavaExec> {
-    jvmArgs = listOf(
-        "--enable-native-access=ALL-UNNAMED",
-        "--module-path", "C:/Program Files/Java/javafx-sdk-21/lib",
-        "--add-modules", "javafx.controls,javafx.base,javafx.graphics"
-    )
+    jvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
+}
+
+tasks.shadowJar {
+    archiveBaseName.set("FileOrganizer")
+    archiveClassifier.set("")
+    archiveVersion.set("")
+    manifest { attributes["Main-Class"] = "FileOrganizerAppKt" }
+}
+
+tasks.register("fatJar") {
+    dependsOn(tasks.shadowJar)
+    group = "build"
+    description = "Zbuduj pojedyńczy JAR z wbudowanymi zależnościami"
 }
